tests/fixtures/invalid/pow_list_str.py
# Cannot call pow() with List[int], Str
x = pow([1, 2, 3], "hello")
